@@ -537,6 +537,7 @@ public final class HtmlServiceImpl implements HtmlService {
         try {
             String html = htmlContent;
             // Perform one-shot sanitizing
+            html = replacePercentTags(html);
             html = replaceHexEntities(html);
             html = processDownlevelRevealedConditionalComments(html);
             html = dropDoubleAccents(html);
@@ -560,8 +561,7 @@ public final class HtmlServiceImpl implements HtmlService {
                 }
                 html = handler.getHTML();
             } catch (final ParsingDeniedException e) {
-                LOG.warn("HTML content will be returned un-white-listed. Reason: "+e.getMessage(), e);
-                return htmlContent;
+                LOG.warn("HTML content will be returned un-white-listed. Reason: {}", e.getMessage(), e);
             }
             // Repetitive sanitizing until no further replacement/changes performed
             final boolean[] sanitized = new boolean[] { true };
@@ -1605,6 +1605,21 @@ public final class HtmlServiceImpl implements HtmlService {
      */
     private static String validate(final String htmlContent) {
         return validateWithHtmlCleaner(replaceHexEntities(htmlContent));
+    }
+
+    private static final Pattern PAT_HEX_PERCENT_TAG = Pattern.compile("<%tag[^>]*>", Pattern.CASE_INSENSITIVE);
+
+    private static String replacePercentTags(final String htmlContent) {
+        final Matcher m = PAT_HEX_PERCENT_TAG.matcher(htmlContent);
+        if (!m.find()) {
+            return htmlContent;
+        }
+        final StringBuffer sb = new StringBuffer(htmlContent.length());
+        do {
+            m.appendReplacement(sb, "");
+        } while (m.find());
+        m.appendTail(sb);
+        return sb.toString();
     }
 
     private static final Pattern PAT_HEX_ENTITIES = Pattern.compile("&#x([0-9a-fA-F]+);", Pattern.CASE_INSENSITIVE);
