@@ -2,6 +2,7 @@
 
  - Fix for bug 30358: Modified HTTP-API call-back pattern to surround injected string with quotes while injected string gets quote-escaped before
  - Fix for bug 30217: Ensure context identifier is contained in login mappings
+ - Fix for bug 30357: Remove harmful "<%tag>" tags from HTML content id displayed inline
 
 * 2013-12-17 - tobias.friedrich@open-xchange.com
 
